
2021-02-12  Ron Norman <rjn@inglenet.com>

	* fodbc.c, fileio.h: Removed 'dateFormat' as it was unused
	* foci.c: Fix to set NLS_DATE_FORMAT and NLS_TIMESTAMP_FORMAT
	* fsqlxfd.c: Improved conversion of DATE/TIME data

2021-02-11  Ron Norman <rjn@inglenet.com>

	* fileio.c: Added a few more checks with possible error message during
			ROLLBACK processing if the QBL file has a problem being read
	* termio.c: Added bounds check to avoid core dump on Centos 6.8
	* fsqlxfd.c: Check for COB_SQL_HIGH_VALUE to hold some hex characters
			that should be used to replace HIGH-VALUES for fields used are 
			part of a WHERE clause (i.e. START statement)

2021-02-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Changed to use lseek with SEEK_SET as lseek using SEEK_CUR and
			a negative 'offset' was failing on Centos 6 and Solaris

2021-02-09  Ron Norman <rjn@inglenet.com>
	* fodbc.c: PostgreSQL requires a SQLCloseCursor just before SQLExecute
				if the statement had been used before.

2021-02-08  Ron Norman <rjn@inglenet.com>

	* common.h: Additional flags added to cob_file for commit/rollback
	* fileio.c: Numerous changes to support commit/rollback for all files
	* fileio.h: 'gentable' removed as table is created if not present
	* foci.c: Fix to set TIME and TIMESTAMP column types
	* fodbc.c: Fix to set TIME and TIMESTAMP column types
	* fsqlxfd.c: Removed check for 'gentable'

2021-02-02  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed to set default file sharing as the COBOL standard
				Set flag to request commit/rollback if COB_LOCK_ROLLBACK is set
	* fodbc.c: Report line number in debuglog file a bit more often

2021-01-28  James K. Lowden  <jklowden@symas.com>

	* sysdefines.h (GC_C_VERSION): let "unknown" be token-pasted, too

2021-01-28  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: Fixes to handle hundreds of seconds and TIME only fields

2021-01-26  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: Fixes to handle COMP-6