@@ -502,6 +502,14 @@
 #          Default:  false
 #          Example:  rollback=TRUE
 
+# Environment name:  COB_STOP_RUN_COMMIT
+#   Parameter name:  stop_run_commit
+#          Purpose:  On STOP RUN with updates pending should it COMMIT
+#             Type:  boolean
+#          Default:  false
+#                    When 'false' a ROLLBACK of pending updates will be done
+#          Example:  stop_run_commit=true
+
 # Environment name:  COB_SORT_MEMORY
 #   Parameter name:  sort_memory
 #          Purpose:  Defines how much RAM to assign for sorting data
